# tg_studio

./: .env.example  .gitignore  Dockerfile  README.md  admin_mockup.html  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0e4fe979c91b_add_business.py  102961f3dfe1_time_slots_use_timestamptz.py  874d9091408f_add_work_schedule.py  9d6cf7cbc1e8_initial.py  a691c7eaf137_refactor_service_pricing_and_booking.py  b8c9d0e1f2a3_booking_chat_messages.py  c9d0e1f2a3b4_master_registration_token.py  de07fc2af32e_service_type_and_project_bookings.py  f1a2b3c4d5e6_add_freedom_pay_to_business.py
docker/: nginx.conf
src/tg_studio/: config.py
src/tg_studio/api/: app.py  auth.py  deps.py
src/tg_studio/api/routes/: bookings.py  business.py  freedompay.py  kaspi.py  slots.py
src/tg_studio/api/routes/admin/: bookings.py  business.py  deps.py  masters.py  router.py  schedule.py  services.py
src/tg_studio/bot/: app.py
src/tg_studio/bot/handlers/: admin.py  booking_flow.py  client_chat.py  start.py
src/tg_studio/bot/keyboards/: booking.py  main.py
src/tg_studio/bot/states/: booking.py
src/tg_studio/db/: __init__.py  models.py  session.py
src/tg_studio/landing/: index.html
src/tg_studio/services/: payment.py  slots.py
src/tg_studio/tasks/: celery_app.py  expire_payment.py  notifications.py  reminders.py
